[gd_scene load_steps=19 format=3 uid="uid://bkp4c3oycvlkj"]

[ext_resource type="Script" uid="uid://dkh8cn8kie663" path="res://Player/CritterJunction/cri_jun_ui.gd" id="1_r76oj"]
[ext_resource type="Texture2D" uid="uid://cqut0h1wua4u0" path="res://Object/CritterJunction/fruit.png" id="2_3qiqx"]
[ext_resource type="Texture2D" uid="uid://pi6fvwqnlyeq" path="res://Object/CritterJunction/fruit_saplings.png" id="3_f2tcw"]
[ext_resource type="Texture2D" uid="uid://dyu8pmjxog6s0" path="res://Object/CritterJunction/fruit_focused.png" id="4_erj35"]
[ext_resource type="Script" uid="uid://2jjfab4duh64" path="res://Player/CritterJunction/apple_button.gd" id="5_f2tcw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4e6bw"]
atlas = ExtResource("2_3qiqx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xga6m"]
atlas = ExtResource("2_3qiqx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofnh5"]
atlas = ExtResource("2_3qiqx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dtlw"]
atlas = ExtResource("2_3qiqx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_arnea"]
atlas = ExtResource("2_3qiqx")
region = Rect2(64, 0, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2tcw"]
bg_color = Color(1, 1, 1, 0.356863)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_f2tcw"]

[sub_resource type="Theme" id="Theme_74gde"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r76oj"]
atlas = ExtResource("3_f2tcw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erj35"]
atlas = ExtResource("3_f2tcw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2tcw"]
atlas = ExtResource("3_f2tcw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74gde"]
atlas = ExtResource("3_f2tcw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw80p"]
atlas = ExtResource("3_f2tcw")
region = Rect2(128, 0, 32, 32)

[node name="CriJunUI" type="Control" groups=["cri_jun_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r76oj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 13.0
offset_top = 4.0
offset_right = 97.0
offset_bottom = 53.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="FruitContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="AppleContainer" type="PanelContainer" parent="MarginContainer/FruitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FruitContainer/AppleContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/FruitContainer/AppleContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/FruitContainer/AppleContainer/MarginContainer/NinePatchRect"]
z_index = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 17.0
offset_bottom = 17.0
grow_vertical = 2
texture = SubResource("AtlasTexture_4e6bw")
expand_mode = 3
stretch_mode = 5

[node name="AppleCount" type="Label" parent="MarginContainer/FruitContainer/AppleContainer/MarginContainer/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -12.0
offset_right = 5.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 2
justification_flags = 162

[node name="OrangeContainer" type="PanelContainer" parent="MarginContainer/FruitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FruitContainer/OrangeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/FruitContainer/OrangeContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/FruitContainer/OrangeContainer/MarginContainer/NinePatchRect"]
z_index = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 17.0
offset_bottom = 17.0
grow_vertical = 2
texture = SubResource("AtlasTexture_xga6m")
stretch_mode = 5

[node name="OrangeCount" type="Label" parent="MarginContainer/FruitContainer/OrangeContainer/MarginContainer/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -12.0
offset_right = 5.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 2
justification_flags = 162

[node name="CherryContainer2" type="PanelContainer" parent="MarginContainer/FruitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FruitContainer/CherryContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/FruitContainer/CherryContainer2/MarginContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/FruitContainer/CherryContainer2/MarginContainer/NinePatchRect"]
z_index = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 17.0
offset_bottom = 17.0
grow_vertical = 2
texture = SubResource("AtlasTexture_ofnh5")
stretch_mode = 5

[node name="CherryCount" type="Label" parent="MarginContainer/FruitContainer/CherryContainer2/MarginContainer/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -12.0
offset_right = 5.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 2
justification_flags = 162

[node name="PeachContainer" type="PanelContainer" parent="MarginContainer/FruitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FruitContainer/PeachContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/FruitContainer/PeachContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/FruitContainer/PeachContainer/MarginContainer/NinePatchRect"]
z_index = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 17.0
offset_bottom = 17.0
grow_vertical = 2
texture = SubResource("AtlasTexture_5dtlw")
stretch_mode = 5

[node name="PeachCount" type="Label" parent="MarginContainer/FruitContainer/PeachContainer/MarginContainer/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -12.0
offset_right = 5.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 2
justification_flags = 162

[node name="PearContainer" type="PanelContainer" parent="MarginContainer/FruitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FruitContainer/PearContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/FruitContainer/PearContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/FruitContainer/PearContainer/MarginContainer/NinePatchRect"]
z_index = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 17.0
offset_bottom = 17.0
grow_vertical = 2
texture = SubResource("AtlasTexture_arnea")
stretch_mode = 5

[node name="PearCount" type="Label" parent="MarginContainer/FruitContainer/PearContainer/MarginContainer/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -12.0
offset_right = 5.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 2
justification_flags = 162

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 592.0
offset_top = 168.0
offset_right = 592.0
offset_bottom = 168.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f2tcw")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_f2tcw")
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="SeedsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="AppleButton" type="TextureButton" parent="PanelContainer/MarginContainer/ScrollContainer/SeedsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = SubResource("Theme_74gde")
texture_normal = SubResource("AtlasTexture_r76oj")
texture_focused = ExtResource("4_erj35")
script = ExtResource("5_f2tcw")

[node name="OrangeButton" type="TextureButton" parent="PanelContainer/MarginContainer/ScrollContainer/SeedsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_erj35")
texture_focused = ExtResource("4_erj35")

[node name="CherryButton" type="TextureButton" parent="PanelContainer/MarginContainer/ScrollContainer/SeedsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_f2tcw")
texture_focused = ExtResource("4_erj35")

[node name="PeachButton" type="TextureButton" parent="PanelContainer/MarginContainer/ScrollContainer/SeedsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_74gde")
texture_focused = ExtResource("4_erj35")

[node name="PearButton" type="TextureButton" parent="PanelContainer/MarginContainer/ScrollContainer/SeedsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_vw80p")
texture_focused = ExtResource("4_erj35")
